src/objects/RecordType_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>This field is to hold the record type developer name</description>
        <inlineHelpText>Record type developer name</inlineHelpText>
        <label>DeveloperName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field is to hold record type name</description>
        <inlineHelpText>Record type Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_type_Id__c</fullName>
        <description>This field is to hold the record type Id</description>
        <inlineHelpText>Record type Id</inlineHelpText>
        <label>Record type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Type__c</fullName>
        <description>This field is to hold the object name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>sObject Type</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RecordType settings</label>
</CustomObject>